logs/Slang/generated/keywords/5.6.2--keyword_table.sv.log
name: keyword_table
description: The 'table' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_table.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_table.sv:8:8: error: expected declarator
    bit table;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_table.sv:8:9: error: expected member
    bit table;
        ^~~~~
